Notification sounds for incoming e-mails are still only played once
Categories
(Thunderbird :: OS Integration, defect)
Tracking
(thunderbird_esr78 wontfix, thunderbird89 fixed)
People
(Reporter: ali-savas, Assigned: rnons)
Details
Attachments
(1 file)
48 bytes,
text/x-phabricator-request
|
wsmwk
:
approval-comm-beta+
|
Details | Review |
The notification sound is played for each new e-mail. However, if another email arrives without reading the previous new email, no new notification sound will be played.
Steps to reproduce
- Minimize Thunderbird in the system tray.
- Wait until the first mail has arrived and the sound has been played. Please do not read the mail!
- Now wait for another mail.
Result
If another e-mail arrives, no notification sound is played.
Expected
A notification sound should be played for each new incoming e-mail.
Assignee | ||
Comment 1•4 years ago
|
||
Updated•4 years ago
|
Assignee | ||
Updated•4 years ago
|
Assignee | ||
Updated•4 years ago
|
Updated•4 years ago
|
Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/2142f5b12de0
Play biff sound on NewMailReceived. r=mkmelin
Assignee | ||
Comment 3•4 years ago
|
||
Comment on attachment 9217945 [details]
Bug 1706890 - Play biff sound on NewMailReceived. r=mkmelin
[Approval Request Comment]
Regression caused by (bug #): Implemented like this
User impact if declined: When a folder contains NEW mails, biff sound doesn't play for new incoming messages.
Testing completed (on c-c, etc.): c-c
Risk to taking this patch (and alternatives if risky): low
Comment 4•4 years ago
|
||
Comment on attachment 9217945 [details]
Bug 1706890 - Play biff sound on NewMailReceived. r=mkmelin
[Triage Comment]
Approved for beta
Comment 5•4 years ago
|
||
bugherder uplift |
Thunderbird 89.0b3:
https://hg.mozilla.org/releases/comm-beta/rev/4202aea426f1
Description
•