Bug 1706890 - Play biff sound on NewMailReceived. r=mkmelin

Differential Revision: https://phabricator.services.mozilla.com/D113209

--HG--
extra : amend_source : a72df7891e3239cbc3048038c978d8937ec73e7c